# Serde

./: Cargo.toml  LICENSE-APACHE  README.md
examples/: basic_demo.rs  enterprise_demo.rs  simple_demo.rs  working_demo.rs
src/: algorithms.rs  analytics.rs  builders.rs  enterprise_models.rs  enterprise_tests.rs  errors.rs  lib.rs  models.rs  pipelines.rs  realtime.rs  serialization.rs
src/models/: mod.rs  order.rs  product.rs  supplier.rs  transaction.rs  warehouse.rs
src/repository/: error.rs  memory.rs  mod.rs  mongodb.rs  sql.rs  traits.rs
