[package]
name = "inventory-serde"
version = "1.0.0"
edition = "2021"
authors = ["Pratik Acharya <acharyapratik214@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Production-ready enterprise inventory management system with machine learning forecasting, multi-warehouse optimization, and comprehensive serialization support"
repository = "https://github.com/ZFlareUI/Serde"
documentation = "https://docs.rs/inventory-serde"
homepage = "https://github.com/ZFlareUI/Serde"
readme = "README.md"
keywords = ["inventory", "forecasting", "optimization", "enterprise", "supply-chain"]
categories = ["algorithms", "science", "data-structures", "encoding", "mathematics"]
exclude = ["target/", "*.log", ".DS_Store", "*.swp", "*.swo"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.30", features = ["serde-float"] }
rust_decimal_macros = "1.30"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.7"
nalgebra = "0.32"
ndarray = "0.15"
linfa = "0.7"
linfa-linear = "0.7"
petgraph = "0.6"
rand = "0.8"
rand_distr = "0.4"
dashmap = "5.5"
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
proptest = "1.4"
tokio-test = "0.4"