[package]
name = "inventory-serde"
version = "0.3.0"
edition = "2021"
authors = ["Pratik Acharya <acharyapratik214@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Production-ready inventory management library for Rust with serialization, business logic, and enterprise features"
repository = "https://github.com/ZFlareUI/Serde"
documentation = "https://docs.rs/inventory-serde"
homepage = "https://github.com/ZFlareUI/Serde"
readme = "README.md"
keywords = ["inventory", "async", "framework", "database", "api"]
categories = ["database", "web-programming", "api-bindings", "asynchronous", "data-structures"]
exclude = ["target/", "*.log", ".DS_Store", "*.swp", "*.swo"]

[features]
default = ["tokio-runtime", "json"]

# Runtime features
tokio-runtime = ["dep:tokio"]

# Serialization features
json = ["serde_json"]
yaml = ["serde_yaml"]
csv = ["dep:csv"]
schema = ["dep:schemars"]

# Database features
sql = ["dep:sqlx"]
postgres = ["dep:sqlx", "sqlx/postgres", "sqlx/runtime-tokio-rustls"]
mysql = ["dep:sqlx", "sqlx/mysql", "sqlx/runtime-tokio-rustls"] 
sqlite = ["dep:sqlx", "sqlx/sqlite", "sqlx/runtime-tokio-rustls"]
mongodb = ["dep:mongodb"]

# API features
api = ["dep:axum", "dep:tower", "dep:tower-http"]
graphql = ["dep:async-graphql", "dep:async-graphql-axum"]

# ML features
forecasting = ["dep:linfa", "dep:linfa-linear", "dep:ndarray"]
analytics = ["dep:plotters"]

# Configuration features
config = ["dep:config", "dep:dotenvy"]

# CLI features
cli = ["dep:clap"]

# Observability features
observability = ["dep:tracing", "dep:tracing-subscriber", "dep:metrics"]

# Notification features
notifications = ["dep:lettre", "dep:slack-hook"]

# Service layer features  
services = []

# Utility features
utils = []

[dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
csv = { version = "1.3", optional = true }
schemars = { version = "0.8", optional = true, features = ["uuid1", "chrono"] }

# Core types
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.30", features = ["serde-float"] }
rust_decimal_macros = "1.30"
url = { version = "2.5", features = ["serde"] }

# Async runtime
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"], optional = true }
async-trait = "0.1"
futures = "0.3"

# Error handling and logging
thiserror = "1.0"
anyhow = "1.0"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
metrics = { version = "0.23", optional = true }

# Database backends
sqlx = { version = "0.8", optional = true, features = ["chrono", "uuid", "json"] }
mongodb = { version = "3.0", optional = true }

# Web framework
axum = { version = "0.7", optional = true, features = ["macros"] }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", optional = true, features = ["cors", "trace"] }
async-graphql = { version = "7.0", optional = true }
async-graphql-axum = { version = "7.0", optional = true }

# Machine Learning
linfa = { version = "0.7", optional = true }
linfa-linear = { version = "0.7", optional = true }
ndarray = { version = "0.15", optional = true }
plotters = { version = "0.3", optional = true }

# Configuration
config = { version = "0.14", optional = true }
dotenvy = { version = "0.15", optional = true }

# CLI
clap = { version = "4.5", optional = true, features = ["derive"] }

# Notifications
lettre = { version = "0.11", optional = true }
slack-hook = { version = "0.8", optional = true }

# Utilities
dashmap = "6.0"
parking_lot = "0.12"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
proptest = "1.4"
tokio-test = "0.4"